--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -49,14 +49,14 @@
                         <div class="c-pageHeader__main">
                             <h1 class="c-pageHeader__title">@BasicData.ProductCode @BasicData.FundName</h1>
                             <!-- 如果沒有tag，不要放 div.c-pageHeader__tags 區塊 -->
-                            @if (Model.TagsDic[FundTagEnum.DiscountTag].Any())
+                            @if (Model.TagsDic.ContainsKey(FundTagEnum.DiscountTag) && Model.TagsDic[FundTagEnum.DiscountTag].Any())
                             {
                                 <div class="c-pageHeader__tags">
                                     <ul class="l-tag">
                                         @foreach (var item in Model.TagsDic[FundTagEnum.DiscountTag])
                                         {
                                             <li class="l-tag__item">
-                                                <a href="#" class="o-tag">@item.FundTagTitle</a>
+                                                <a href="#" class="o-tag">@item</a>
                                             </li>
                                         }
                                     </ul>
@@ -141,7 +141,7 @@
                             <li class="l-pageWallet__item">
                                 @Html.CompareButton(null, BasicData.ProductCode, BasicData.FundName, InvestTypeEnum.Fund, false)
                             </li>
-                            @if (BasicData.OnlineSubscriptionAvailability.ToBoolean())
+                            @if (BasicData.AvailabilityStatus.ToBoolean() && (string.IsNullOrEmpty(BasicData.OnlineSubscriptionAvailability) || BasicData.OnlineSubscriptionAvailability.ToBoolean()))
                             {
                                 <li class="l-pageWallet__btn">
                                     @Html.SubscriptionButton(null, BasicData.ProductCode, InvestTypeEnum.Fund, false)
@@ -422,7 +422,7 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
+            @if ( Model.TagsDic.ContainsKey(FundTagEnum.SortTag) && Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
@@ -431,7 +431,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                    <a href="#" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1375,7 +1375,7 @@
 
                 </div>
             </section>
-            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
+            @if (Model.TagsDic.ContainsKey(FundTagEnum.SortTag) && Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
@@ -1384,7 +1384,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                    <a href="#" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1681,7 +1681,7 @@
                     </div>
                 </div>
             </section>
-            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
+            @if (Model.TagsDic.ContainsKey(FundTagEnum.SortTag) && Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
@@ -1690,7 +1690,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                    <a href="#" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -1782,7 +1782,7 @@
                 </div>
 
             </section>
-            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
+            @if (Model.TagsDic.ContainsKey(FundTagEnum.SortTag) && Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
@@ -1791,7 +1791,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                    <a href="#" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2347,7 +2347,7 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
+            @if (Model.TagsDic.ContainsKey(FundTagEnum.SortTag) && Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
@@ -2356,7 +2356,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                    <a href="#" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2459,7 +2459,7 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
+            @if (Model.TagsDic.ContainsKey(FundTagEnum.SortTag) && Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
@@ -2468,7 +2468,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                    <a href="#" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
@@ -2522,7 +2522,7 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
+            @if (Model.TagsDic.ContainsKey(FundTagEnum.SortTag) && Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
@@ -2531,7 +2531,7 @@
                             @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
                                 <li class="l-divideList__item l-divideList__item--auto">
-                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                    <a href="#" class="o-hashTag u-nowrap">#@item</a>
                                 </li>
                             }
                         </ul>
