--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -128,17 +128,19 @@
 													<div class="l-target__name">
 														<a href="@Model.FundDetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
 													</div>
-													@if (item.TargetName == "Y")
+													@if (item.Tags != null)
 													{
 														<div class="l-target__additional">
 															<ul class="l-tag">
-																<li class="l-tag__item">
-																	<a href="#" class="o-tag">百元基金</a>
-																</li>
+																@for (var i = 0; i < item.Tags.Count; i++)
+																{
+																	<li class="l-tag__item">
+																		<a href="#" class="o-tag">@item.Tags[i] </a>
+																	</li>
+																}
 															</ul>
 														</div>
 													}
-
 												</div>
 											</div>
 										</td>
@@ -189,7 +191,7 @@
 										<!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
 										<td class="c-cardTable__space"></td>
 										<!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
-										<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
+										<td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "2/3" : "1/1")">
 											<div class="c-cardTable__content">
 												<ul class="l-collect l-collect--divider@lt">
 													<li class="l-collect__item">
@@ -201,10 +203,9 @@
 												</ul>
 											</div>
 										</td>
-
 										<td class="c-cardTable__footer" data-card-table-width="1/3">
 											<div class="c-cardTable__content">
-												@if (item.OnlineSubscriptionAvailability == "Y")
+												@if (item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability)))
 												{
 													@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.Fund, true)
 												}
@@ -399,7 +400,7 @@
 											}
 										</td>
 										<td class="c-cardTable__space"></td>
-										<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
+										<td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "2/3" : "1/1")">
 											<div class="c-cardTable__content">
 												<ul class="l-collect l-collect--divider@lt">
 													<li class="l-collect__item">
@@ -411,10 +412,9 @@
 												</ul>
 											</div>
 										</td>
-
 										<td class="c-cardTable__footer" data-card-table-width="1/3">
 											<div class="c-cardTable__content">
-												@if (item.OnlineSubscriptionAvailability == "Y")
+												@if (item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability)))
 												{
 													@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.ETF, true)
 												}
