--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
@@ -125,6 +125,19 @@
 													<div class="l-target__name">
 														<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
 													</div>
+													@if (item.ETFDiscountTags.Length > 0)
+													{
+														<div class="l-target__additional">
+															<ul class="l-tag">
+																@for (var i = 0; i < item.ETFDiscountTags.Length; i++)
+																{
+																	<li class="l-tag__item">
+																		<a href="#" class="o-tag"> @item.ETFDiscountTags[i]</a>
+																	</li>
+																}
+															</ul>
+														</div>
+													}
 												</div>
 											</div>
 										</td>
@@ -157,7 +170,7 @@
 											<div class="c-cardTable__content">@item.TenDayAverageVolumeFormat</div>
 										</td>
 										<td class="c-cardTable__space"></td>
-										<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
+										<td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "2/3" : "1/1")">
 											<div class="c-cardTable__content">
 												<ul class="l-collect l-collect--divider@lt">
 													<li class="l-collect__item">
@@ -171,7 +184,7 @@
 										</td>
 										<td class="c-cardTable__footer" data-card-table-width="1/3">
 											<div class="c-cardTable__content">
-												@if (item.OnlineSubscriptionAvailability == "Y")
+												@if (item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability)))
 												{
 													@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.ETF, true)
 												}
